add home button

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shadow Game</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=M+PLUS+1p:wght@700&display=swap">
+    <script src="dist/homeButton.js"></script>
+    <script src="dist/bundle.js"></script>
     <style>
         body {
             margin: 0;
@@ -18,6 +20,5 @@
     </style>
 </head>
 <body>
-    <script src="dist/bundle.js"></script>
 </body>
 </html>
